2000-06-22  Bruno Haible  <haible@clisp.cons.org>

        * include/cl_object.h: Rename cl_word_size to cl_pointer_size.
        * include/cl_types.h (HAVE_FAST_LONGLONG): Also define on Irix6
          with N32 ABI.
          (cl_word_size): New macro.
        * src/float/sfloat/cl_SF.h: Use cl_pointer_size instead of
          cl_word_size.

2000-06-05  Richard Kreckel  <kreckel@ginac.de>

        * doc/*, INSTALL: Mention that both shared and static library are
          are now build by default.

2000-05-31  Bruno Haible  <haible@clisp.cons.org>

        * tests/exam_I_floor.cc (integer_floor_tests): Add one more entry.
          From a sample that fails with gcc-2.95.2 on Sparc.
        * tests/exam_I_gcd.cc (integer_gcd_tests): Likewise.

2000-05-30  Richard Kreckel  <kreckel@ginac.de>

        * configure.in, autoconf/aclocal.m4 (CL_GMP_H_VERSION, CL_GMP_CHECK):
          New macros.
        * configure.in, include/cl_config.h.in (CL_VERSION, CL_VERSION_MINOR,
          CL_VERSION_PATCHLEVEL): New definitions.
        * autoconf/config.guess, autoconf/config.sub, autoconf/ltconfig,
          autoconf/ltmain.sh: updated from FSF (libtool 1.3.5, etc).
        * src/Makefile.in, configure.in: release-variables renamed from 
          CLN_* to CL_*.
        * configure.in: default to build both shared and static library
          (i.e. default to the most common behaviour).

2000-05-29  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/aclocal.m4 (CL_CANONICAL_HOST): Added missing changequote
          environment around the patch of 2000-05-23.

2000-05-29  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/aclocal.m4 (CL_PROG_INSTALL): Fix typo.
          Reported by Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>.

2000-05-27  Richard Kreckel  <kreckel@ginac.de>

        * src/float/lfloat/algebraic/cl_LF_sqrt.cc,
          src/base/digitseq/cl_DS_sqrt.cc: Readjusted break-even points.

2000-05-24  Richard Kreckel  <kreckel@ginac.de>
