@@ -1,3 +1,13 @@
+2000-07-13  Bruno Haible  <haible@clisp.cons.org>
+
+        * src/float/input/cl_F_read_stream.cc (number_char_p): Accept '_',
+          used as precision marker for floats.
+          Reported by Keith Briggs (in 1998) and Thomas Roessler.
+        * src/integer/input/cl_I_read_stream.cc (number_char_p): Likewise.
+        * src/rational/input/cl_RA_read_stream.cc (number_char_p): Likewise.
+        * src/real/input/cl_R_read_stream.cc (number_char_p): Likewise.
+        * src/complex/input/cl_N_read_stream.cc (number_char_p): Likewise.
+
 2000-06-22  Bruno Haible  <haible@clisp.cons.org>
 
         * include/cl_object.h: Rename cl_word_size to cl_pointer_size.
